--- a/omlet.html
+++ b/omlet.html
@@ -13,7 +13,7 @@
             <li>1 ч.л. растительного масла</li>
 
         </ul>
-        <h2>Приготовление</h2>
+        <h2>Приготовленbе</h2>
         <ol>
             <li>Яйца перемешать с солью.</li>
             <li>Влить молоко, слегка перемешивая.</li>
